--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
 
 plugins {
     id "java"
-    id "org.jetbrains.kotlin.jvm" version "1.3.72"
+    // id "org.jetbrains.kotlin.jvm" version "1.3.72"
+    id "org.jetbrains.kotlin.jvm" version "1.5.20"
 }
 
 group 'com.bennyhuo.kotlin'
